[gd_scene load_steps=59 format=3 uid="uid://bvis2sf6sfcla"]

[ext_resource type="Script" path="res://scripts/skeleton_fighter.gd" id="1_fxjjb"]
[ext_resource type="Texture2D" uid="uid://ce5lt052sd0po" path="res://Textures/Enemy/skeleton/Skeleton_Walk.png" id="2_5iehy"]
[ext_resource type="Texture2D" uid="uid://csdu7h6fms0ar" path="res://Textures/Enemy/skeleton/Skeleton_Attack.png" id="2_18raq"]
[ext_resource type="Texture2D" uid="uid://ndivmyvm3up5" path="res://Textures/Enemy/skeleton/Skeleton_Dead.png" id="3_6xehc"]
[ext_resource type="PackedScene" uid="uid://42qup1p37ood" path="res://scenes/hurt_box.tscn" id="4_aq0u6"]
[ext_resource type="PackedScene" uid="uid://b5o0hduemvf04" path="res://scenes/hit_box.tscn" id="5_iqn8i"]
[ext_resource type="AudioStream" uid="uid://bx6h2js624jur" path="res://Audio/sfx/slime-death.wav" id="6_qq6d6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lp7ny"]
atlas = ExtResource("2_18raq")
region = Rect2(0, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnmx2"]
atlas = ExtResource("2_18raq")
region = Rect2(21, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ndx"]
atlas = ExtResource("2_18raq")
region = Rect2(42, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl7nt"]
atlas = ExtResource("2_18raq")
region = Rect2(63, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f04rb"]
atlas = ExtResource("2_18raq")
region = Rect2(84, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vja2"]
atlas = ExtResource("2_18raq")
region = Rect2(0, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj1q4"]
atlas = ExtResource("2_18raq")
region = Rect2(21, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_883re"]
atlas = ExtResource("2_18raq")
region = Rect2(42, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b83pn"]
atlas = ExtResource("2_18raq")
region = Rect2(63, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qb2q"]
atlas = ExtResource("2_18raq")
region = Rect2(84, 24, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycyql"]
atlas = ExtResource("2_18raq")
region = Rect2(0, 48, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cimcq"]
atlas = ExtResource("2_18raq")
region = Rect2(21, 48, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw62v"]
atlas = ExtResource("2_18raq")
region = Rect2(42, 48, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef3oi"]
atlas = ExtResource("2_18raq")
region = Rect2(63, 48, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t40by"]
atlas = ExtResource("2_18raq")
region = Rect2(84, 48, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd1hl"]
atlas = ExtResource("2_18raq")
region = Rect2(0, 72, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypsva"]
atlas = ExtResource("2_18raq")
region = Rect2(21, 72, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns4v3"]
atlas = ExtResource("2_18raq")
region = Rect2(42, 72, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ek3m"]
atlas = ExtResource("3_6xehc")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m7ue"]
atlas = ExtResource("3_6xehc")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8gbm"]
atlas = ExtResource("3_6xehc")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj6jx"]
atlas = ExtResource("3_6xehc")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfx36"]
atlas = ExtResource("3_6xehc")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lw15"]
atlas = ExtResource("3_6xehc")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pq0c"]
atlas = ExtResource("3_6xehc")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmnl4"]
atlas = ExtResource("3_6xehc")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvy3u"]
atlas = ExtResource("3_6xehc")
region = Rect2(0, 64, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nc4c"]
atlas = ExtResource("3_6xehc")
region = Rect2(33, 64, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f74qr"]
atlas = ExtResource("3_6xehc")
region = Rect2(66, 64, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s8qk"]
atlas = ExtResource("3_6xehc")
region = Rect2(99, 64, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb5kt"]
atlas = ExtResource("3_6xehc")
region = Rect2(0, 96, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7fbs"]
atlas = ExtResource("3_6xehc")
region = Rect2(33, 96, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm2pc"]
atlas = ExtResource("3_6xehc")
region = Rect2(66, 96, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_824ou"]
atlas = ExtResource("2_5iehy")
region = Rect2(0, 0, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8m8h"]
atlas = ExtResource("2_5iehy")
region = Rect2(17, 0, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmnbt"]
atlas = ExtResource("2_5iehy")
region = Rect2(34, 0, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3siu"]
atlas = ExtResource("2_5iehy")
region = Rect2(51, 0, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj15k"]
atlas = ExtResource("2_5iehy")
region = Rect2(68, 0, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_enumb"]
atlas = ExtResource("2_5iehy")
region = Rect2(0, 25, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2onp8"]
atlas = ExtResource("2_5iehy")
region = Rect2(17, 25, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr8yx"]
atlas = ExtResource("2_5iehy")
region = Rect2(34, 25, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6w05"]
atlas = ExtResource("2_5iehy")
region = Rect2(51, 25, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_12daq"]
atlas = ExtResource("2_5iehy")
region = Rect2(68, 25, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_icdkp"]
atlas = ExtResource("2_5iehy")
region = Rect2(0, 50, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tlms"]
atlas = ExtResource("2_5iehy")
region = Rect2(17, 50, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5i58"]
atlas = ExtResource("2_5iehy")
region = Rect2(34, 50, 17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrt65"]
atlas = ExtResource("2_5iehy")
region = Rect2(51, 50, 17, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_kk5g6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp7ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnmx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1ndx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl7nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f04rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vja2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj1q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_883re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b83pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qb2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycyql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cimcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw62v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef3oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t40by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd1hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypsva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns4v3")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ek3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m7ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8gbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj6jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfx36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lw15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pq0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmnl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvy3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nc4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f74qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s8qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb5kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7fbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm2pc")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_824ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8m8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmnbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3siu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj15k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enumb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2onp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr8yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6w05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12daq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icdkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tlms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5i58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrt65")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s3whu"]
radius = 7.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_va5u1"]
radius = 7.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_17s6n"]
radius = 7.0
height = 26.0

[node name="skeleton_fighter" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_fxjjb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kk5g6")
animation = &"attack"
frame_progress = 0.304407

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_s3whu")

[node name="HurtBox" parent="." instance=ExtResource("4_aq0u6")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CapsuleShape2D_va5u1")

[node name="HitBox" parent="." instance=ExtResource("5_iqn8i")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CapsuleShape2D_17s6n")

[node name="skeleton_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qq6d6")
volume_db = -15.0
bus = &"Sfx"

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]

[editable path="HurtBox"]
[editable path="HitBox"]
